# src/main/kotlin/no/nav/syfo/oppfolgingsplanmottak/OppfolgingsplanApi.kt
@@ -1,12 +1,10 @@
 package no.nav.syfo.oppfolgingsplanmottak
 
-import io.ktor.server.application.call
-import io.ktor.server.auth.authenticate
-import io.ktor.server.request.receive
-import io.ktor.server.response.respondText
-import io.ktor.server.routing.Routing
-import io.ktor.server.routing.post
-import io.ktor.server.routing.route
+import io.ktor.server.application.*
+import io.ktor.server.auth.*
+import io.ktor.server.request.*
+import io.ktor.server.response.*
+import io.ktor.server.routing.*
 import no.nav.syfo.application.api.auth.JwtIssuerType
 import no.nav.syfo.application.database.DatabaseInterface
 import no.nav.syfo.oppfolgingsplanmottak.database.storeLps
@@ -22,6 +20,15 @@ fun Routing.registerOppfolgingsplanApi(
                 val virksomhetsnavn = oppfolgingsplanDTO.oppfolgingsplanMeta.virksomhet.virksomhetsnavn
                 database.storeLps(oppfolgingsplanDTO, 1)
                 call.respondText(successText(virksomhetsnavn))
+            }
+        }
+    }
+
+    route("/api/v1/followupplan/write") {
+        authenticate(JwtIssuerType.MASKINPORTEN.name) {
+            post {
+                val oppfolgingsplanDTO = call.receive<OppfolgingsplanDTO>()
+                call.respondText("TODO")
             }
         }
     }
